# verification_uvm_cocotb

./: .gitignore  COMMIT_HISTORY.md  Dockerfile  README.md  Use_Runner.md  main.py  make_basic_prj.py  pyproject.toml
.surfer/mappings/: spi_master_state.map
Course_1/: v_binaries.py  v_binary_types.py  v_decorator.py  v_loggin.py  v_random.py  v_random_choice.py
Course_2/4bit_adder/: adder.sv  dump.vcd  results.xml
Course_2/8_1_mux/: makefile  mux.vcd  results.xml
Course_2/Project_1/: adder_tb.py  dump.vcd  results.xml
Course_2/binary/: makefile  results.xml  top_tb.py  top_tb.sv
Course_2/clock/: clocks.vcd  makefile  results.xml  top_clock.sv  top_tb.py
Course_2/d_flip_flop/: d_ff.vcd  d_ff_tb.py  results.xml
Course_2/functions/: dump.vcd  makefile  results.xml  top_tb.py  top_tb.sv
Course_2/memory/: makefile  memory.vcd  memory_tb.py  (+1 more)
ML_cocotb/: COMPARISON.md  EXECUTIVE_SUMMARY.md  INDEX.md  Makefile  README.md  RESULTS_COMPARISON.md  compare_verification_methods.py  filter.v  generate_comparison.py  ml_agent.py  ml_agent_regressor.py  ml_temporal_agent.py  results.xml  run_comparison.sh  test_fir_ml.py  test_fir_ml_memory.py  test_fir_ml_regressor.py  test_fir_random.py
PosSynVerification/: Ver_Pos_Synth.md  dff.sv  dff_synth.v  run_synth_test.py  synth.ys
Runner/: Use_Runner.md
ml_random_forest/: Makefile  README.md  SOLUTIONS.md  compare_models.py  explain_prediction_error.py  explain_symmetry.py  mult.sv  results.xml  test_mult_rf.py
ml_spi/: Makefile  README.md  results.xml  spi_master.sv  spi_slave.sv  spi_top.sv  test_spi_ml.py
(+235 files in other folders)
